# claude-code-engineering-guide

./: .gitignore  ARCHITECTURE.md  CLAUDE.install.md  CLAUDE.md  CONVENTIONS.starkbank.md  HISTORY_TASKS.md  QUICKSTART.md  README.md  TASKS.md  configure.sh  install.sh  mutmut.toml  pyproject.toml  setup.sh
.claude/: CATALOG.md  PIPELINE.md  README.md  settings.json
.claude/agents/: code-reviewer.md  requirements-analyst.md  service-impact-analyzer.md  support-investigator.md  tasks-maintainer.md  test-reviewer.md  test-runner.md
.claude/commands/: blast-radius.md  daily-send.md  daily.md  format.md  investigate.md  mutation-test.md  my_tasks.md  pipeline-audit.md  requirements.md  review.md  security-review.md  spec.md  update.md  verify-delivery.md
.claude/hooks/: check-bash-syntax.sh  check-for-update.sh  check-python-style.sh  classify_intent.py  enforce-intake-protocol.sh  inject-git-context.sh  inject-tasks-context.sh  mark-session-start.sh  notify-done.sh  post-commit.sh  pre-commit-gate.sh  python_style_check.py  record-mutation-results.sh  record-test-results.sh  sort-imports-on-edit.sh  (+3 more)
config/: sortImports.py
pipeline-cli/: pyproject.toml  setup.cfg
pipeline-cli/pipeline/: cli.py  db.py  export.py  indexer.py  llm.py  vector.py
tests/: checkBashSyntaxTest.py  checkPythonStyleIntegrationTest.py  configureTest.py  conftest.py  dbTest.py  exportTest.py  injectGitContextTest.py  injectTasksContextTest.py  phaseGateTest.py  pythonStyleCheckTest.py  queryExpansionTest.py  searchOutputTest.py  setupTest.py  sortImportsTest.py  validateDestructiveTest.py
(+8 files in other folders)
